functional components and composition

--- a/settingUpReactJS/helloWorld.html
+++ b/settingUpReactJS/helloWorld.html
@@ -22,6 +22,9 @@
     <div id="root11"></div>
     <div id="root12"></div>
     <div id="root13"></div>
+    <div id="root14"></div>
+    <div id="root15"></div>
+    <div id="root16"></div>
     
 	<script type="text/babel">
 		ReactDOM.render(
